[package]
name = "dse-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.6.2"
ethers-core = "0.6.2"
ethers-contract = "0.6.2"
ethers-providers = "0.6.2"
rocksdb = "0.18.0"
bincode = "1.3.3"
anyhow = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18.1", features = [ "full" ]}